fixed spacing for master select and grabbed current user info to display name on home page

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -25,3 +25,12 @@ h1 {
     display: flex;
     justify-content: space-evenly;
 }
+
+.header__link {
+    color: white;
+    text-decoration: none;
+}
+
+.header__link:hover {
+    color: lavender;
+}
