--- a/src/components/notes/Note.css
+++ b/src/components/notes/Note.css
@@ -15,5 +15,6 @@
 }
 
 .noteForm {
+    margin-top: 20px;
     text-align: center;
 }
